# blitz

./: README.md  chat.md  clean_chat.py  differences.md  main.py  pyproject.toml  todo.md
blitz/: __init__.py  ast.py  codegen.py  compiler.py  grammar.md  lexer.py  parser.py
game/: shooter.blitz  shooter.blitzc  sideways.blitz  sideways.blitzc
render/: __init__.py  shader.glsl  window.py
runtime/: __init__.py  entities.py  game.py
vm/: __init__.py  bytecode.py  interpreter.py  opcodes.py
